# controllers/posts.ts
@@ -60,7 +60,8 @@ const createPost = async (req: Request, res: Response) => {
                 schema: {
                   $content: 'Jhon Doe',
                   $authorId: '6465a918462368509b563b23',
-                  tags: ["Technology", "Innovation", "Programming"]
+                  tags: ["Technology", "Innovation", "Programming"],
+                  replyTo: "6465abf6462368509b563b30"
                 }
         } */
   try {
